modified tab complete